		* One UNICODE fix in UDPSocket.cpp:283.
		* Fix for rommel's report of IP filter problem.
		* Backport of SetIPFilterLevel fix, thanks to geeko for
		reporting.
		* Changed the output of the "Oops" to give better instructions
		to the user.
		* Applied patch from volpol to fix use of deprecated functions
		in wxGTK-2.5.3.
		* Applied patch from geeko to complete html functionality of
		cas.

	Ken:
		* Fixed Mac bug: window was a little larger each restart.
		* Fixed aMule.tmpl so Safari can work with amuleweb (reported
		by blue_eclipse).
		* On Mac, enabled Command-clicking in lists to toggle selection.
		* Fixed an endianness bug with webserver

	volpol
		* Patch to fix use of deprecated functions in wxGTK-2.5.3.

	Special Thanks To:
		* Bug and feature reporters:
		rommel
		geeko

--------------------------------------------------------------------------------

Version 2.0.0rc8 - The "last rc" version.
----------
2004-12-21

	Baz:
		* Fix for server stats for users/files not being updated correctly.
		* Fix for ERROR and WARNING server messages not being shown.
		* Fixed server / transfers window splitters not being loaded/saved correctly.
		* Fixed categories on search dialog not being refreshed on category name change.

	deltaHF: 
		* Show comments for shared files

	Hetfield:
		* Some fix in new Tray system and desktopMode bypass

	Jacobo221:
		* Added option to select the max and min size-type in advanced
		  searches.
		* When "Extended Parameters" in Search tab is not selected, 
		  defaults are used.
		* Now "Auto-update serverlist at startup" checks if there's a 
		  serverlist to avoid annoying messages at startup.
		* "Clear completed downloads" is now disabled while no
		  completed downloads are listed.
		* Context menu for download items only enables relevant
		  information now.
		* Context menu little optimization (removed an unuseful loop)
		  and Open File fix.
		* Added bitmap button wich pops-up the last status log line